fixed spacing issues and formatting

--- a/src/componets/youtuber/youtuber.css
+++ b/src/componets/youtuber/youtuber.css
@@ -1,6 +1,6 @@
 .youtubePlayerContainer {
-    margin-top: 0;
-    margin-bottom: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     width: 100%;
     max-width: 600px;
   }
